# Shuhari-CyberForge

./: Cargo.toml  LICENSE  README.md  SECURITY.md  VISION.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/banners/: general_banners.rs  mod.rs  warden_banners.rs
cli/src/shells/: mod.rs  warden_sh.rs
tools/shugo/: Cargo.toml
tools/shugo/src/: ShugoREADME.md  lib.rs
tools/shugo/src/antivirus/: display.rs  scanner.rs
tools/shugo/src/common/: wmi_helpers.rs
tools/shugo/src/firewall/: display.rs  scanner.rs
tools/shugo/src/uac/: display.rs  scanner.rs
tools/shugo/src/uas/: display.rs  scanner.rs
tools/shugo/src/updates/: display.rs  scanner.rs
tools/takeri/: Cargo.toml
tools/warden/: Cargo.toml
tools/warden/src/: antivirus.rs  antivirus_check.rs  defender.rs  lib.rs
tools/warden/src/antivirus/: display.rs  scanner.rs
tools/warden/src/common/: mod.rs  time.rs  wmi_helpers.rs
tools/warden/src/firewall/: display.rs  scanner.rs
tools/warden/src/uac/: display.rs  scanner.rs
tools/warden/src/uas/: display.rs
tools/warden/src/updates/: display.rs  mod.rs  scanner.rs  windows_update_scanner.rs
tools/warden/src/windows_defender/: mod.rs
