[workspace]
members = ["cli", "tools/takeri", "tools/shugo"]

resolver = "3"

[workspace.dependencies]
windows = {version = ">=0.59, <=0.62", features = [
    "Win32_System_UpdateAgent",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_NetworkManagement_NetManagement"
]}
clap = {version = "4.5.53", features = ["derive"]}